[package]
name = "tap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
clap = { version = "3.0.14", features = ["derive"] }
colored = "2.0.0"
shell-words = "1.0.0"
thiserror = "1.0.30"
